--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -35,15 +35,15 @@ h1 {
   font-size: 24px;
   font-weight: normal; }
 
-rememberMealways
 .fa-plus {
   float: right; }
 
 li {
   background: #fff;
   height: 40px;
-  line-height: 40px;
-  color: #666; }
+  color: #666;
+  display: flex;
+  align-items: center; }
 
 span {
   background: #e74c3c;
@@ -54,7 +54,10 @@ span {
   width: 0;
   display: inline-block;
   transition: 0.2s linear;
-  opacity: 0; }
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 li:hover span {
   width: 40px;
