--- a/sass/components/todo.scss
+++ b/sass/components/todo.scss
@@ -11,6 +11,8 @@ ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+
+	
 }
 
 
@@ -23,7 +25,7 @@ h1 {
 	font-size: 24px;
 	font-weight: normal;
 } 
-rememberMealways
+
 
 .fa-plus {
 	float: right; 
@@ -35,14 +37,18 @@ rememberMealways
 li {
 	background: #fff;
 	height: 40px;
-	line-height: 40px;
+	// line-height: 40px;
 	color: #666; 
+
+	display: flex;
+	align-items: center;
 }
 
 
 span {
 	background: #e74c3c;
 	height: 40px;
+	// line-height: 40px;
 	margin-right: 20px;
 	text-align: center;
 	color: white;
@@ -50,6 +56,10 @@ span {
 	display: inline-block;
 	transition: 0.2s linear;
 	opacity: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 li:hover span {
